Fix button alignments

--- a/reload-inside-urlbar.as.css
+++ b/reload-inside-urlbar.as.css
@@ -4,20 +4,20 @@
   Prerequisite: Put reload button on the right of the urlbar
 */
 
-#stop-reload-button .toolbarbutton-icon {
-  width: 28px !important;
-  height: 28px !important;
+:root {
+  --reload-icon-size: 28px;
 }
-:root[uidensity="compact"] #stop-reload-button .toolbarbutton-icon {
-  width: 24px !important;
-  height: 24px !important;
+:root[uidensity="compact"] {
+  --reload-icon-size: 24px;
 }
-:root[uidensity="touch"] #stop-reload-button .toolbarbutton-icon {
-  width: 30px !important;
-  height: 30px !important;
+:root[uidensity="touch"] {
+  --reload-icon-size: 30px;
 }
 
 #stop-reload-button .toolbarbutton-icon {
+  width: var(--reload-icon-size) !important;
+  height: var(--reload-icon-size) !important;
+
   -moz-context-properties: fill, fill-opacity !important;
   fill: currentColor !important;
   fill-opacity: 0.6 !important;
@@ -26,25 +26,12 @@
 }
 
 #page-action-buttons {
-  margin-right: 30px !important;
+  margin-right: calc(var(--reload-icon-size) + 2px) !important;
 }
+
 #stop-reload-button {
   position: relative;
   z-index: 3;
-  transform: translateX(-36px);
-  margin-right: -36px !important;
-}
-:root[uidensity="compact"] #page-action-buttons {
-  margin-right: 26px !important;
-}
-:root[uidensity="compact"] #stop-reload-button {
-  transform: translateX(-32px);
-  margin-right: -32px !important;
-}
-:root[uidensity="touch"] #page-action-buttons {
-  margin-right: 32px !important;
-}
-:root[uidensity="touch"] #stop-reload-button {
-  transform: translateX(-38px);
-  margin-right: -38px !important;
+  transform: translateX(calc((var(--reload-icon-size) + 8px) * -1));
+  margin-right: calc((var(--reload-icon-size) + 2px) * -1) !important;
 }
